# time_rs

./: .clippy.toml  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.nix  Cargo.toml  Makefile  Makefile.license  codecov.yml  deny.toml  flake.nix  renovate.json  renovate.json.license  tarpaulin-report.html
.github/: copilot-instructions.md
.github/workflows/: cargo_test.yml  ci.yml  commit_checks.yml  coverage.yml  validate-generated-workflows.yml
.reuse/: dep5
LICENSES/: MIT.txt
cue.mod/: module.cue
internal/ci/: ci.cue  common.cue  pre-commit.cue  validate_generated.cue  workflows.cue
nix/: dev_shell.nix  rust_platform.nix
nix/per_system/: apps.nix
scripts/: generate-workflows.sh
time_rs/: Cargo.toml
time_rs/src/: lib.rs  main.rs
time_rs/src/cli/: mod.rs
time_rs/src/cli/commands/: mod.rs  repo.rs  start.rs  status.rs  stop.rs  summary.rs
time_rs/src/cli/commands/repo/: error.rs
time_rs/src/commands/: start.rs  status.rs  stop.rs  summary.rs
time_rs/src/config/: error.rs  mod.rs
time_rs/src/sourcing/: message.rs
time_rs_derive/: Cargo.toml
time_rs_derive/src/: lib.rs
time_rs_sourcing/: Cargo.toml
time_rs_sourcing/src/: lib.rs  message.rs
