# SPDX-FileCopyrightText: 2023 Norbert Melzer <timmelzer@gmail.com>
#
# SPDX-License-Identifier: MIT

[workspace]
resolver = "2"

members = [
  "time_rs",
]

[workspace.package]
authors = [
    "Norbert Melzer <nmelzer@nobbz.dev>",
]
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
assert_fs = "1.1.3"
color-eyre = "0.6.5"
directories = "6.0.0"
eyre = "0.6.12"
glob = "0.3.3"
mutants = "0.0.3"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
shellexpand = "3.1.1"
thiserror = "2.0.17"

[workspace.dependencies.clap]
version = "4.5.53"
features = ["cargo", "derive"]

[workspace.dependencies.figment]
version = "0.10.19"
features = ["test", "env", "json", "toml", "yaml"]

[workspace.dependencies.gix]
version = "0.75.0"
features = ["blocking-network-client", "worktree-mutation", "blocking-http-transport-curl-rustls"]

[workspace.dependencies.prodash]
version = "30.0.1"
features = ["render-line-crossterm", "render-line"]

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.48.0"
features = ["full", "macros", "tracing"]

[workspace.dependencies.tokio-stream]
version = "0.1.17"
features = ["full"]
