# SPDX-FileCopyrightText: 2023 Norbert Melzer <timmelzer@gmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "time_rs"
version = "0.1.0"
license = "MIT"
edition = "2021"
authors = ["Norbert Melzer <nmelzer@nobbz.dev>"]

[[bin]]
name = "timers"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.53", features = ["cargo", "derive"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
figment = { version = "0.10.19", features = [
    "test",
    "env",
    "json",
    "toml",
    "yaml",
] }
glob = "0.3.3"
eyre = "0.6.12"
color-eyre = "0.6.5"
lazy_static = "1.5.0"
gix = { version = "0.75.0", features = ["blocking-network-client", "worktree-mutation"] }
shellexpand = "3.1.1"

[dev-dependencies]
assert_fs = "1.1.3"
rstest = "0.26.1"
rstest_reuse = "0.7.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
