# SPDX-FileCopyrightText: 2023 Norbert Melzer <timmelzer@gmail.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "time_rs"
edition = "2021"
authors.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "timers"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
color-eyre.workspace = true
directories.workspace = true
eyre.workspace = true
figment.workspace = true
gix.workspace = true
glob.workspace = true
mutants.workspace = true
prodash.workspace = true
serde.workspace = true
shellexpand.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_fs.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
